logs/pyxst.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyxst'...
Listing './lib/python3.5/site-packages/pyxst/dtd'...
Compiling './lib/python3.5/site-packages/pyxst/dtd/parser.py'...
***   File "./lib/python3.5/site-packages/pyxst/dtd/parser.py", line 70
    except etree.DTDParseError, exc:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyxst/dtd/utils.py'...
***   File "./lib/python3.5/site-packages/pyxst/dtd/utils.py", line 53
    except KeyError, exc:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyxst/xml_struct'...
Listing './lib/python3.5/site-packages/pyxst/xsd'...
Compiling './lib/python3.5/site-packages/pyxst/xsd/constraints.py'...
***   File "./lib/python3.5/site-packages/pyxst/xsd/constraints.py", line 160
    except ValueError, exc:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyxst/xsd/parser.py'...
***   File "./lib/python3.5/site-packages/pyxst/xsd/parser.py", line 69
    except IOError, exc:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyxst/xsd/root.py'...
***   File "./lib/python3.5/site-packages/pyxst/xsd/root.py", line 615
    except ValueError, exc:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyxst/xsd/utils.py'...
***   File "./lib/python3.5/site-packages/pyxst/xsd/utils.py", line 169
    except KeyError, exc:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyxst-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
